Update README.md with project details and footer styling changes

--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
     <title>Victoria + Portfolio</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <div class="hero-container">
+        <div class="hero-text" id="explore-text">Explore</div>
+      </div>
+    </div>
+    
     <script type="module" src="./src/main.jsx"></script>
   </body>
 </html>
