--- a/victoriawebsite/index.html
+++ b/victoriawebsite/index.html
@@ -5,6 +5,10 @@
     <link rel="icon" type="image/svg+xml" href="/src/assets/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Victoria | Portfolio</title>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"> /*font awesome cdn*/
+
+
   </head>
   <body>
     <div id="root"></div>
@@ -31,8 +35,8 @@
    <title>Digital Developer | Designer Portfolio 2024</title>  
 <link rel="stylesheet"  href="website-portfolio/assets/stylesheet.css"> <!--link to css stylesheet-->
 
+<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 
-<link rel="icon" type="image/x-icon" href="/favicon/favicon-16x16.png">
 
 <!--dm sans and source code pro font-->
 <link rel="preconnect" href="https://fonts.googleapis.com">
